Mangler bare lytder

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 
     <div class="desc">
         Reglene er satt opp slik at stein slår saks, saks slår papir og papir vinner over stein. Logikken er at du kan knuse en saks med en stein, 
-        klippe stykker et papir med en saks og pakke inn en stein i papir. Det blir spilt tl best av tre.
+        klippe stykker et papir med en saks og pakke inn en stein i papir. Det blir spilt tl best av tre hver runde.
     </div>
 
     <a class="start" href="./game.html">Start</a>
