--- a/html/game.html
+++ b/html/game.html
@@ -3,16 +3,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
-    <title>Document</title>
+    <title>Stein, Saks, Papir</title>
 </head>
 <body>
 
+    <div class="round">Runde <div class="roundNumber">1</div></div>
+
     <div class="players">
         <img class="p1" src="../img/unknown.png" alt="question mark">
+        <div class="score"><div class="p1Score">0</div><div> - </div><div class="p2Score">0</div></div>
         <img class="p2" src="../img/unknown.png" alt="question mark">
+        <div class="p1Round">0</div>
+        <div class="p2Round">0</div>
     </div>
     
-    <div><button class="ready">Klar</button></div>
+    <div class="timer">0</div>
+
+    <div><button id="readyButton" class="ready">Klar</button></div>
 
     <div class="choose">
         <button class="stein"><img src="../img/stein.jpg" alt="stein"></button>
