ferdig med iterasjon 2, la til lyder

--- a/html/game.html
+++ b/html/game.html
@@ -27,6 +27,9 @@
         <button class="papir"><img src="../img/papir.jpg" alt="papir"></button>
     </div>
 
+    <audio src="../sounds/win.mp3" class="winSound"></audio>
+    <audio src="../sounds/lose.wav" class="loseSound"></audio>
+
     <script src="../script/game.js"></script>
 </body>
 </html>
