la til kommentarer i javascript

--- a/html/game.html
+++ b/html/game.html
@@ -19,7 +19,7 @@
     
     <div class="timer">0</div>
 
-    <div><button id="readyButton" class="ready">Klar</button></div>
+    <div><button id="readyButton">Klar</button></div>
 
     <div class="choose">
         <button class="stein"><img src="../img/stein.jpg" alt="stein"></button>
