--- a/html/game.html
+++ b/html/game.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <title>Stein, Saks, Papir</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" rel="stylesheet" href="../CSS/style.css">
+        <title>Stein, Saks, Papir</title>
+        <script defer src="script/game.js"></script>
 </head>
 <body>
 
@@ -30,6 +32,6 @@
     <audio src="../sounds/win.mp3" class="winSound"></audio>
     <audio src="../sounds/lose.wav" class="loseSound"></audio>
 
-    <script src="../script/game.js"></script>
+
 </body>
 </html>
